<resources>
    <string name="app_name">Impiccato</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="lingua">Lingua</string>
    <string name="lunghezza_minima_parole">Lunghezza minima parole</string>
    <string name="salva">SALVA</string>
    <string name="menu">MENU</string>
    <string name="prossima_parola">PROSSIMA PAROLA</string>
    <string name="la_parola_da_indovivare_era">La parola da indovivare era:</string>
    <string name="i_tentativi_che_hai_utilizzato_sono">I tentativi che hai utilizzato sono:</string>
    <string name="hai_indovinato">HAI INDOVINATO</string>
    <string name="non_hai_indovinato">NON HAI INDOVINATO</string>
    <string name="parola_numero">Parola numero</string>
    <string name="parola_numero2">Parola numero</string>
    <string name="parole_non_indovinate">Parole non indovinate:</string>
    <string name="parole_indovinate">Parole indovinate:</string>

    <string-array name="lingue">
        <item>Italiano</item>
        <item>Inglese</item>
    </string-array>

    <string-array name="lunghezza">
        <item>4 lettere</item>
        <item>6 lettere</item>
        <item>8 lettere</item>
    </string-array>
</resources>